--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <i class="fas fa-search-plus"></i>
               </div>
             </div>
-            <img class="rounded img-fluid" src="http://placehold.it/320x280">
+            <img class="rounded img-fluid" src="https://picsum.photos/320/280?image=0">
           </a>
           <div class="item-caption">
             <h4>Item #1</h4>
@@ -50,7 +50,7 @@
                 <i class="fas fa-search-plus"></i>
               </div>
             </div>
-            <img class="rounded img-fluid" src="http://placehold.it/320x280">
+            <img class="rounded img-fluid" src="https://picsum.photos/320/280?image=10">
           </a>
           <div class="item-caption">
             <h4>Item #2</h4>
@@ -64,7 +64,7 @@
                 <i class="fas fa-search-plus"></i>
               </div>
             </div>
-            <img class="rounded img-fluid" src="http://placehold.it/320x280">
+            <img class="rounded img-fluid" src="https://picsum.photos/320/280?image=20">
           </a>
           <div class="item-caption">
             <h4>Item #3</h4>
@@ -80,7 +80,7 @@
                 <i class="fas fa-search-plus"></i>
               </div>
             </div>
-            <img class="rounded img-fluid" src="http://placehold.it/320x280">
+            <img class="rounded img-fluid" src="https://picsum.photos/320/280?image=30">
           </a>
           <div class="item-caption">
             <h4>Item #4</h4>
@@ -94,7 +94,7 @@
                 <i class="fas fa-search-plus"></i>
               </div>
             </div>
-            <img class="rounded img-fluid" src="http://placehold.it/320x280">
+            <img class="rounded img-fluid" src="https://picsum.photos/320/280?image=40">
           </a>
           <div class="item-caption">
             <h4>Item #5</h4>
@@ -108,7 +108,7 @@
                 <i class="fas fa-search-plus"></i>
               </div>
             </div>
-            <img class="rounded img-fluid" src="http://placehold.it/320x280">
+            <img class="rounded img-fluid" src="https://picsum.photos/320/280?image=50">
           </a>
           <div class="item-caption">
             <h4>Item #6</h4>
@@ -120,20 +120,24 @@
   </section>
 
   <!-- Modal -->
-<div class="modal fade" id="modal-item-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="modal-item-1" tabindex="-1" role="dialog" aria-labelledby="modal-label-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Item #1</h5>
+        <h5 class="modal-title" id="modal-label-1">Item #1</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=0"></div>
+            <div class="col-md-4" id="item-desc"></div>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
@@ -146,6 +150,25 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
   
+  <script>
+    function httpGetAsync(url, callback) {
+       var xmlHttp = new XMLHttpRequest(); 
+       xmlHttp.onreadystatechange = function () { 
+         if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
+          callback(xmlHttp.responseText); 
+       }; 
+       
+       xmlHttp.open('GET', url, true);         
+       xmlHttp.send(null); 
+    }
+
+    $(document).ready(function() {
+      httpGetAsync(
+        'https://baconipsum.com/api/?type=meat-and-filler&sentences=3&format=html', 
+        function (e) { $('.modal-body .col-md-4').html(e) });
+    });
+
+  </script>
 </body>
 
 </html>
