--- a/index.html
+++ b/index.html
@@ -120,29 +120,35 @@
   </section>
 
   <!-- Modal -->
-<div class="modal fade" id="modal-item-1" tabindex="-1" role="dialog" aria-labelledby="modal-label-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modal-label-1">Item #1</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=0"></div>
-            <div class="col-md-4" id="item-desc"></div>
+  <div class="modal fade" id="modal-item-1" tabindex="-1" role="dialog" aria-labelledby="modal-label-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label-1">Item #1</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=0"></div>
+              <div class="col-md-4" id="item-desc"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">I 'll take it</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <footer class="footer">
+    <div class="container">
+        <span>&copy; Konstantinos Rekalidis 2018</span>
+    </div>
+  </footer>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
