Adding the rest of modal windows

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="col-sm giveaway-item">
-          <a href="#" class="item-link" data-toggle="modal">
+          <a href="#modal-item-2" class="item-link" data-toggle="modal">
             <div class="item-hover">
               <div class="item-hover-content">
                 <i class="fas fa-search-plus"></i>
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="col-sm giveaway-item">
-          <a href="#" class="item-link" data-toggle="modal">
+          <a href="#modal-item-3" class="item-link" data-toggle="modal">
             <div class="item-hover">
               <div class="item-hover-content">
                 <i class="fas fa-search-plus"></i>
@@ -74,7 +74,7 @@
       </div>
       <div class="row">
         <div class="col-sm giveaway-item">
-          <a href="#" class="item-link" data-toggle="modal">
+          <a href="#modal-item-4" class="item-link" data-toggle="modal">
             <div class="item-hover">
               <div class="item-hover-content">
                 <i class="fas fa-search-plus"></i>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="col-sm giveaway-item">
-          <a href="#" class="item-link" data-toggle="modal">
+          <a href="#modal-item-5" class="item-link" data-toggle="modal">
             <div class="item-hover">
               <div class="item-hover-content">
                 <i class="fas fa-search-plus"></i>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="col-sm giveaway-item">
-          <a href="#" class="item-link" data-toggle="modal">
+          <a href="#modal-item-6" class="item-link" data-toggle="modal">
             <div class="item-hover">
               <div class="item-hover-content">
                 <i class="fas fa-search-plus"></i>
@@ -133,7 +133,127 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=0"></div>
-              <div class="col-md-4" id="item-desc"></div>
+              <div class="col-md-4" id="item-desc-1"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">I 'll take it</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal-item-2" tabindex="-1" role="dialog" aria-labelledby="modal-label-2" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label-2">Item #2</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=10"></div>
+              <div class="col-md-4" id="item-desc-2"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">I 'll take it</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal-item-3" tabindex="-1" role="dialog" aria-labelledby="modal-label-3" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label-3">Item #3</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=20"></div>
+              <div class="col-md-4" id="item-desc-3"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">I 'll take it</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal-item-4" tabindex="-1" role="dialog" aria-labelledby="modal-label-4" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label-4">Item #4</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=30"></div>
+              <div class="col-md-4" id="item-desc-4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">I 'll take it</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal-item-5" tabindex="-1" role="dialog" aria-labelledby="modal-label-5" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label-5">Item #5</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=40"></div>
+              <div class="col-md-4" id="item-desc-5"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">I 'll take it</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal-item-6" tabindex="-1" role="dialog" aria-labelledby="modal-label-6" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-label-6">Item #6</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8"><img class="rounded img-fluid" src="https://picsum.photos/768/576?image=50"></div>
+              <div class="col-md-4" id="item-desc-6"></div>
             </div>
           </div>
         </div>
